--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+# Templates and data
+BROWN_COSMOS
+fiducial_filters_102
+output
+sed-vis.packaging
+*.pickle
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
